Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ html {
   align-items: center;
   flex-wrap: wrap;
   width: 100vw;
-  /* background-color: aliceblue; */
 }
 
 .top-heading {
@@ -40,16 +39,17 @@ html {
 }
 
 .right {
-  margin: 30px 0px 10px 0px;
   display: flex;
   justify-content: center;
-  height: 500px;
+  align-items: center;
+  height: 520px;
   width: 450px;
 }
 
+/* 
 .blob {
   filter: drop-shadow(20px 20px 0px rgb(219, 232, 243));
-}
+} */
 
 #update {
   position: fixed;
